--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Oswald:wght@300;500&family=Playfair+Display:wght@400;800&display=swap");
 
+/* Root Variables*/
 :root {
-  background-color: black;
+  --main-color: #111;
+  --font-color: #fff;
   --font-header: "Playfair Display", serif;
   --font-subheader: "Playfair Display", serif;
   --font-paragraph: "Inter", sans-serif;
 }
 
+html {
+  background-color: var(--main-color);
+  color: var(--font-color);
+}
+
+/* Fonts */
 p {
   color: white;
   font-size: 18px;
@@ -28,15 +36,8 @@ h6 {
   color: gray;
 }
 
-.swatch {
-  width: 100px;
-  height: 100px;
-}
-
-.swatch {
-  /* Remove this rule when you set your colors! */
-  background-color: red;
-  margin: 1px;
+a {
+  font-family: var(--font-subheader);
 }
 
 main {
@@ -44,32 +45,36 @@ main {
   margin: auto;
 }
 
-#nav {
-  top: 3%;
+nav {
+  display: flex;
+  flex-direction: column;
   position: fixed;
+  top: 20%;
+  left: 0%;
+  padding-left: 1%;
 }
 
 #nav > header > nav > a {
+  font-family: "Inter", sans-serif;
   text-decoration: none;
   color: white;
-  border: 1px solid black;
+  padding: 8px 12px;
+  border: 1px hidden #111;
   border-radius: 10%;
-  padding: 20px;
 }
 
+#nav > header > nav > a:active,
 #nav > header > nav > a:hover {
   text-decoration: none;
   color: black;
   background-color: white;
-  border: 1px solid black;
-  border-radius: 10%;
-  padding: 20px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
 /* (A) FIXED WRAPPER */
 #banner {
-  margin-top: 4em;
-  background: black;
+  background: var(--main-color);
   overflow: hidden;
 }
 
@@ -100,4 +105,16 @@ ticker-tape {
 }
 #banner > ticker-tape > h1:hover {
   animation-play-state: paused;
+}
+
+/* Color Swatches for Cart */
+.swatch {
+  width: 100px;
+  height: 100px;
+}
+
+.swatch {
+  /* Remove this rule when you set your colors! */
+  background-color: red;
+  margin: 1px;
 }
