--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   --main-color: #111;
   --font-color: #fff;
   --font-header: "Playfair Display", serif;
-  --font-subheader: "Playfair Display", serif;
+  --font-subheader: "Oswald", sans-serif;
   --font-paragraph: "Inter", sans-serif;
 }
 
@@ -150,20 +150,32 @@ ticker-tape {
 }
 
 .card {
-  border: 2px solid rgba(88, 80, 236);
-  border-radius: 2%;
-  width: 400px;
-  padding-bottom: 5px;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+  width: 300px;
+  padding-bottom: 40px;
   margin: 10px 4px;
-  background-color: ;
+  background-color: #151320;
 }
 
 .card > img {
   width: 100%;
+
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+  object-fit: contain;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
 
 .card > p {
   font-family: var(--font-subheader);
+  font-size: 1em;
+  margin: auto;
+  margin-top: 15px;
+  display: block;
+  text-align: center;
+  color: white;
+  font-weight: 300;
 }
 
 /* Color Swatches for Cart */
