in progress: radio work

--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,32 @@ ticker-tape {
   background-color: red;
   margin: 1px;
 }
+
+/* Forms */
+label {
+  font-family: var(--font-paragraph);
+}
+
+input,
+textarea {
+  color: white;
+  background-color: #111;
+  border: 2px solid rgba(88, 80, 236);
+  border-radius: 2%/8%;
+  padding: 1em 15em 1em 1em;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
+form > label > textarea {
+  padding: 1em 15em 4em 1em;
+  border-radius: 2%/8%;
+}
+
+.checkbox,
+.radio {
+  color: silver;
+}
