Map colors to css from sass for swatches

--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Oswald:wght@300;500&family=Playfair+Display:wght@400;800&display=swap");
+
 /* Root Variables*/
 :root {
   --main-color: #111;
@@ -161,6 +162,7 @@ ticker-tape {
 
 .card > img {
   width: 100%;
+
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
   object-fit: contain;
@@ -216,6 +218,7 @@ form > label > textarea {
 }
 
 /* Radio */
+
 input[type="radio"] {
   display: none;
 }
@@ -267,400 +270,8 @@ input[type="radio"]:checked + label::before {
   flex-direction: column;
 }
 
-.color-0 {
-  background-color: #3bebdc;
+@for $n from 0 to 99 {
+  .color-#{$n} {
+    background-color: rgb(random(255), random(255), random(255));
+  }
 }
-
-.color-1 {
-  background-color: #0d08e0;
-}
-
-.color-2 {
-  background-color: #7ad32c;
-}
-
-.color-3 {
-  background-color: #ac0296;
-}
-
-.color-4 {
-  background-color: #6343db;
-}
-
-.color-5 {
-  background-color: #faf7a4;
-}
-
-.color-6 {
-  background-color: #0596d7;
-}
-
-.color-7 {
-  background-color: #ada895;
-}
-
-.color-8 {
-  background-color: #94ae67;
-}
-
-.color-9 {
-  background-color: #43a349;
-}
-
-.color-10 {
-  background-color: #8109fb;
-}
-
-.color-11 {
-  background-color: #7411dd;
-}
-
-.color-12 {
-  background-color: #6c07a9;
-}
-
-.color-13 {
-  background-color: #db6ebf;
-}
-
-.color-14 {
-  background-color: #f41cca;
-}
-
-.color-15 {
-  background-color: #0546cf;
-}
-
-.color-16 {
-  background-color: #63e434;
-}
-
-.color-17 {
-  background-color: #c79bee;
-}
-
-.color-18 {
-  background-color: #29dc1d;
-}
-
-.color-19 {
-  background-color: #3f8a5e;
-}
-
-.color-20 {
-  background-color: #218cfe;
-}
-
-.color-21 {
-  background-color: #200785;
-}
-
-.color-22 {
-  background-color: #a0759b;
-}
-
-.color-23 {
-  background-color: #cf968f;
-}
-
-.color-24 {
-  background-color: #f1cc4d;
-}
-
-.color-25 {
-  background-color: #45bf6a;
-}
-
-.color-26 {
-  background-color: #054de0;
-}
-
-.color-27 {
-  background-color: #cc5c4d;
-}
-
-.color-28 {
-  background-color: #9103ea;
-}
-
-.color-29 {
-  background-color: #6fe34e;
-}
-
-.color-30 {
-  background-color: #931554;
-}
-
-.color-31 {
-  background-color: #e86087;
-}
-
-.color-32 {
-  background-color: #5ca0d1;
-}
-
-.color-33 {
-  background-color: #1a1391;
-}
-
-.color-34 {
-  background-color: #405d73;
-}
-
-.color-35 {
-  background-color: #26d478;
-}
-
-.color-36 {
-  background-color: #7ffd17;
-}
-
-.color-37 {
-  background-color: #855e7f;
-}
-
-.color-38 {
-  background-color: #de7564;
-}
-
-.color-39 {
-  background-color: #e9dc20;
-}
-
-.color-40 {
-  background-color: #d5bb2d;
-}
-
-.color-41 {
-  background-color: #4c06e2;
-}
-
-.color-42 {
-  background-color: #a539bd;
-}
-
-.color-43 {
-  background-color: #206e43;
-}
-
-.color-44 {
-  background-color: #88eaee;
-}
-
-.color-45 {
-  background-color: #c48324;
-}
-
-.color-46 {
-  background-color: #758e7f;
-}
-
-.color-47 {
-  background-color: #a1b36a;
-}
-
-.color-48 {
-  background-color: #8f1531;
-}
-
-.color-49 {
-  background-color: #d328cc;
-}
-
-.color-50 {
-  background-color: #1448b0;
-}
-
-.color-51 {
-  background-color: #7fe775;
-}
-
-.color-52 {
-  background-color: #d9a001;
-}
-
-.color-53 {
-  background-color: #c81eca;
-}
-
-.color-54 {
-  background-color: #e61889;
-}
-
-.color-55 {
-  background-color: #5c3e07;
-}
-
-.color-56 {
-  background-color: #039832;
-}
-
-.color-57 {
-  background-color: #769452;
-}
-
-.color-58 {
-  background-color: #b4c448;
-}
-
-.color-59 {
-  background-color: #ec7bd0;
-}
-
-.color-60 {
-  background-color: #4d58e2;
-}
-
-.color-61 {
-  background-color: #bdaed2;
-}
-
-.color-62 {
-  background-color: #8a0a5e;
-}
-
-.color-63 {
-  background-color: #d4fc1d;
-}
-
-.color-64 {
-  background-color: #a2698e;
-}
-
-.color-65 {
-  background-color: #3d1e87;
-}
-
-.color-66 {
-  background-color: #89dca8;
-}
-
-.color-67 {
-  background-color: #f5bbbc;
-}
-
-.color-68 {
-  background-color: #07264e;
-}
-
-.color-69 {
-  background-color: #177a4d;
-}
-
-.color-70 {
-  background-color: #20d42f;
-}
-
-.color-71 {
-  background-color: #c2f695;
-}
-
-.color-72 {
-  background-color: #6ccdef;
-}
-
-.color-73 {
-  background-color: #800bca;
-}
-
-.color-74 {
-  background-color: #458eae;
-}
-
-.color-75 {
-  background-color: #1d1e1f;
-}
-
-.color-76 {
-  background-color: #670584;
-}
-
-.color-77 {
-  background-color: #4b52ed;
-}
-
-.color-78 {
-  background-color: #6d79f8;
-}
-
-.color-79 {
-  background-color: #518827;
-}
-
-.color-80 {
-  background-color: #631a08;
-}
-
-.color-81 {
-  background-color: #eb3401;
-}
-
-.color-82 {
-  background-color: #0b04da;
-}
-
-.color-83 {
-  background-color: #3879ed;
-}
-
-.color-84 {
-  background-color: #729ff1;
-}
-
-.color-85 {
-  background-color: #bc9e88;
-}
-
-.color-86 {
-  background-color: #100590;
-}
-
-.color-87 {
-  background-color: #8a8b89;
-}
-
-.color-88 {
-  background-color: #9e4cb8;
-}
-
-.color-89 {
-  background-color: #55bd7e;
-}
-
-.color-90 {
-  background-color: #a92735;
-}
-
-.color-91 {
-  background-color: #8eb482;
-}
-
-.color-92 {
-  background-color: #e35f26;
-}
-
-.color-93 {
-  background-color: #b850f3;
-}
-
-.color-94 {
-  background-color: #b4583e;
-}
-
-.color-95 {
-  background-color: #5babe2;
-}
-
-.color-96 {
-  background-color: #f15df5;
-}
-
-.color-97 {
-  background-color: #b34064;
-}
-
-.color-98 {
-  background-color: #c8face;
-}
-
-/*# sourceMappingURL=styles.css.map */
